[package]
name = "wgpu-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.15.1"
winit = "0.28.3"
anyhow = "1.0.70"
cfg-if = "1"
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
cgmath = "0.18.0"
tobj = { version = "3.2.5", features = ["async"] }
stl_io = "0.7.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0.70"
fs_extra = "1.3.0"
glob = "0.3.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wgpu = { version = "0.15.1", features = ["webgl"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = [
    "Document",
    "Window",
    "Element",
    "Location"
] }
reqwest = "0.11.16"
